# workout-analytics

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml  teste.py
src/exercises/: squat-detector.py  squat_detector.py
