[project]
name = "workout-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mediapipe==0.10.21",
    "numpy>=1.26.4",
    "opencv-python>=4.11.0.86",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.7",
    "pre-commit>=4.5.1",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["mediapipe.*", "cv2.*"]
ignore_missing_imports = true

[tool.ruff.lint]
select = ["E", "F", "D"]
ignore = ["D100", "D104", "D203", "D213"]

[tool.ruff]
line-length = 102
